Fix crash on startup when m_changer is null

For some reasons m_changer can be null here. This is probably only
hiding the effects and doesn't fix the cause unfortunately.

BUG: 464274

Signed-off-by: Carl Schwan <carl@carlschwan.eu>


(cherry picked from commit 6858a2b1c7188cda288efcdaa772c7cbb05b9282)